# GeneralsGamePatch

./: .gitattributes  .gitignore  CONTRIBUTE.md  CONTRIBUTION_GUIDELINES.md  CleanBuild.bat  DONATE.md  LICENSE  LICENSE.txt  README.md  TERMS.txt
Documents/: BigFileFormat.txt  CsfFileFormat.txt  ModuleList.txt
Maps/: README.md  ReadMe.txt
Patch104pZH/: .gitignore  MAKE_Install.bat  MAKE_Install_Run.bat  MAKE_Patch104pArtZH.bat  MAKE_Patch104pZH.bat  MAKE_Release.bat  MAKE_Uninstall.bat  ModBundleAudioItems.json  ModBundleCoreAudioItems.json  ModBundleCoreItems.json  ModBundleCoreLanguageItems.json  ModBundleCorePacks.json  ModBundleFullPacks.json  ModBundleItems.json  ModBundleLanguageItems.json  ModBundleOptionalAudioItems.json  ModBundleOptionalItems.json  ModBundleOptionalLanguageItems.json  ModBundlePacks.json  ModBundlePristineCorePacks.json  ModBundlePristineFullPacks.json  (+8 more)
Patch104pZH/Scripts/ModBuilder/: .gitignore  build-lite.json  build.json  buildproject.py  poetry.toml  pyproject.toml
Patch104pZH/Scripts/ModBuilder/generalsmodbuilder/: __version__.py  buildfunctions.py  main.py  util.py
Patch104pZH/Scripts/ModBuilder/generalsmodbuilder/changelog/: generator.py  parser.py
Patch104pZH/Scripts/ModBuilder/generalsmodbuilder/config/: Legacy.txt
Patch104pZH/Scripts/ModBuilder/generalsmodbuilder/data/: bundles.py  changeconfig.py  common.py  folders.py  runner.py  tools.py
Patch104pZH/Scripts/ModBuilder/generalsmodbuilder/gui/: gui.py
Patch104pZH/Scripts/ModBuilder/windows/: build-lite.bat  build.bat  clean-all.bat  clean-build.bat  clean-venv.bat
(+10413 files in other folders)
